add custom join/leave messages and dispatch LevelUpEvent